# fake-aws

./: .gitignore  Dockerfile  Jenkinsfile  jnlp.Docker  pipeline.Docker  pyproject.toml
fakeaws/: api.py
fakeaws/adapters/: dynamodb.py
fakeaws/models/: Product.py  ProductDTO.py  ProductMapper.py
scripts/: dynamodb-pre.sh  resource-pre-query.json  resource-pro-query.json  secrets-dynamodb-pre.sh
terraform/: secrets
terraform/base/: base.tfvars  lambda.py
terraform/modules/dynamodb/: main.tf
terraform/modules/group/: main.tf
terraform/modules/lambda/: main.tf
terraform/modules/s3/: main.tf
terraform/modules/secret_manager/: main.tf
terraform/pre/: apply.sh  destroy.sh  plan.sh  pre.tf  pre.tfvars  terraform.tfstate  terraform.tfstate.backup
terraform/pro/: pro.tf  pro.tfvars
