[tool.poetry]
name = "fwk-aws-micro"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "fakeaws" },
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.38.36"
pydantic = "^2.11.7"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
